tests/snapshots/sfc/js/patches__script_with_setup_function.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 191
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"


import { ref } from 'vue'

const _sfc_main = {
  name: 'SetupFunctionComponent',
  setup() {
    const count = ref(0)
    return { count }
  }
}

export function render(_ctx, _cache) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_ctx.count), 1 /* TEXT */))
}

_sfc_main.render = render
export default _sfc_main
