tests/snapshots/sfc/js/patches__transition_inside_v_if_should_use_builtin.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output
---
import { Transition as _Transition, openBlock as _openBlock, createBlock as _createBlock, createElementVNode as _createElementVNode, createCommentVNode as _createCommentVNode } from "vue"


const _hoisted_1 = /*#__PURE__*/ _createElementVNode("div", null, "content")
import { ref } from 'vue'

export default {
  __name: 'test',
  setup(__props) {

const show = ref(true)

return (_ctx, _cache) => {
  return (show.value)
      ? (_openBlock(), _createBlock(_Transition, {
        key: 0,
        name: "fade"
      }))
      : _createCommentVNode("v-if", true)
}
}

}
