tests/snapshots/sfc/js/patches__type_comparison_should_not_be_stripped.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 191
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode, unref as _unref } from "vue"

import { defineComponent as _defineComponent } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  props: ["type"],
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const props = __props;
    const isButton = props.type === "button";
    const isLink = props.type !== "link";
    const __returned__ = {
      isButton,
      isLink,
      type
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_unref($setup.isButton))
    ? (_openBlock(), _createElementBlock("button", {
      key: 0
    }, "Button"))
    : (!_unref($setup.isLink))
      ? (_openBlock(), _createElementBlock("a", {
        key: 1,
        href: "#"
      }, "Link"))
    : _createCommentVNode("v-if", true)
}

__sfc__.render = render
export default __sfc__
